test/bad/sample41.dave
# test syntactic analysis
int main() {
    int _asd = "string";
    print(_asd);
}